gen/PythonSParser.py
# Generated from C:/Users/rodri/novo_compilador\PythonS.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonSParser ( Parser ):

    grammarFileName = "PythonS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'print'", "'input'", "'range'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+='", "'*='", 
                     "'='", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", 
                     "'+'", "'-'", "'*'", "'/'", "','", "':'", "';'", "'('", 
                     "')'", "'{'", "'}'", "'||'", "'&&'", "'!'", "'for'", 
                     "'break'", "'if'", "'else'", "'while'", "'in'", "'def'", 
                     "'main'", "'return'", "<INVALID>", "'int'", "'real'", 
                     "'string'", "'bool'", "'void'", "'True'", "'False'" ]

    symbolicNames = [ "<INVALID>", "PRINT", "INPUT", "RANGE", "INT_VALUE", 
                      "FLOAT_VALUE", "STR_VALUE", "BOOL_VALUE", "KW_PLUS_ASSIGNMENT", 
                      "KW_MULT_ASSIGNMENT", "KW_ASSIGNMENT", "KW_GREATERTHAN", 
                      "KW_LESSERTHAN", "KW_GREATERQUALTHAN", "KW_LESSEREQUALTHAN", 
                      "KW_EQUAL", "KW_NOTEQUAL", "KW_PLUS", "KW_MINUS", 
                      "KW_MULT", "KW_DIV", "KW_COMMA", "KW_COLON", "KW_SEMICOLON", 
                      "KW_PARENTHESIS_OPEN", "KW_PARENTHESIS_CLOSE", "KW_BRACKETS_OPEN", 
                      "KW_BRACKETS_CLOSE", "KW_OR", "KW_AND", "KW_NOT", 
                      "KW_FOR", "KW_BREAK", "KW_IF", "KW_ELSE", "KW_WHILE", 
                      "KW_IN", "KW_DEF", "KW_MAIN", "KW_RETURN", "TYPE", 
                      "KW_INT", "KW_FLOAT", "KW_STRING", "KW_BOOL", "KW_VOID", 
                      "KW_TRUE", "KW_FALSE", "ID", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_global_variables_declaration = 1
    RULE_functions_declaration = 2
    RULE_main_function_declaration = 3
    RULE_function_body_statements = 4
    RULE_function_declaration = 5
    RULE_return_statement = 6
    RULE_function_call_statement = 7
    RULE_forloop_statement = 8
    RULE_while_statement = 9
    RULE_break_statement = 10
    RULE_if_statement = 11
    RULE_else_statement = 12
    RULE_print_statement = 13
    RULE_global_variable_declaration_statement = 14
    RULE_global_single_variable_declaration_statement = 15
    RULE_global_multiple_variable_declaration_statement = 16
    RULE_local_variable_declaration_statement = 17
    RULE_local_single_variable_declaration_statement = 18
    RULE_local_multiple_variable_declaration_statement = 19
    RULE_assigment_statement = 20
    RULE_expr = 21
    RULE_term = 22
    RULE_term2 = 23
    RULE_term3 = 24
    RULE_term4 = 25
    RULE_term5 = 26
    RULE_term6 = 27
    RULE_factor = 28
    RULE_r_input = 29

    ruleNames =  [ "program", "global_variables_declaration", "functions_declaration", 
                   "main_function_declaration", "function_body_statements", 
                   "function_declaration", "return_statement", "function_call_statement", 
                   "forloop_statement", "while_statement", "break_statement", 
                   "if_statement", "else_statement", "print_statement", 
                   "global_variable_declaration_statement", "global_single_variable_declaration_statement", 
                   "global_multiple_variable_declaration_statement", "local_variable_declaration_statement", 
                   "local_single_variable_declaration_statement", "local_multiple_variable_declaration_statement", 
                   "assigment_statement", "expr", "term", "term2", "term3", 
                   "term4", "term5", "term6", "factor", "r_input" ]

    EOF = Token.EOF
    PRINT=1
    INPUT=2
    RANGE=3
    INT_VALUE=4
    FLOAT_VALUE=5
    STR_VALUE=6
    BOOL_VALUE=7
    KW_PLUS_ASSIGNMENT=8
    KW_MULT_ASSIGNMENT=9
    KW_ASSIGNMENT=10
    KW_GREATERTHAN=11
    KW_LESSERTHAN=12
    KW_GREATERQUALTHAN=13
    KW_LESSEREQUALTHAN=14
    KW_EQUAL=15
    KW_NOTEQUAL=16
    KW_PLUS=17
    KW_MINUS=18
    KW_MULT=19
    KW_DIV=20
    KW_COMMA=21
    KW_COLON=22
    KW_SEMICOLON=23
    KW_PARENTHESIS_OPEN=24
    KW_PARENTHESIS_CLOSE=25
    KW_BRACKETS_OPEN=26
    KW_BRACKETS_CLOSE=27
    KW_OR=28
    KW_AND=29
    KW_NOT=30
    KW_FOR=31
    KW_BREAK=32
    KW_IF=33
    KW_ELSE=34
    KW_WHILE=35
    KW_IN=36
    KW_DEF=37
    KW_MAIN=38
    KW_RETURN=39
    TYPE=40
    KW_INT=41
    KW_FLOAT=42
    KW_STRING=43
    KW_BOOL=44
    KW_VOID=45
    KW_TRUE=46
    KW_FALSE=47
    ID=48
    WS=49
    COMMENT=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_variables_declaration(self):
            return self.getTypedRuleContext(PythonSParser.Global_variables_declarationContext,0)


        def functions_declaration(self):
            return self.getTypedRuleContext(PythonSParser.Functions_declarationContext,0)


        def main_function_declaration(self):
            return self.getTypedRuleContext(PythonSParser.Main_function_declarationContext,0)


        def getRuleIndex(self):
            return PythonSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PythonSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.global_variables_declaration()
                self.state = 61
                self.functions_declaration()
                self.state = 62
                self.main_function_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.global_variables_declaration()
                self.state = 65
                self.main_function_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.functions_declaration()
                self.state = 68
                self.main_function_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.main_function_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_variables_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_variable_declaration_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSParser.Global_variable_declaration_statementContext)
            else:
                return self.getTypedRuleContext(PythonSParser.Global_variable_declaration_statementContext,i)


        def getRuleIndex(self):
            return PythonSParser.RULE_global_variables_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_variables_declaration" ):
                listener.enterGlobal_variables_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_variables_declaration" ):
                listener.exitGlobal_variables_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_variables_declaration" ):
                return visitor.visitGlobal_variables_declaration(self)
            else:
                return visitor.visitChildren(self)




    def global_variables_declaration(self):

        localctx = PythonSParser.Global_variables_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_global_variables_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40:
                self.state = 73
                self.global_variable_declaration_statement()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Functions_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(PythonSParser.Function_declarationContext,i)


        def getRuleIndex(self):
            return PythonSParser.RULE_functions_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctions_declaration" ):
                listener.enterFunctions_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctions_declaration" ):
                listener.exitFunctions_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctions_declaration" ):
                return visitor.visitFunctions_declaration(self)
            else:
                return visitor.visitChildren(self)




    def functions_declaration(self):

        localctx = PythonSParser.Functions_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functions_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    self.function_declaration() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_DEF(self):
            return self.getToken(PythonSParser.KW_DEF, 0)

        def KW_MAIN(self):
            return self.getToken(PythonSParser.KW_MAIN, 0)

        def KW_PARENTHESIS_OPEN(self):
            return self.getToken(PythonSParser.KW_PARENTHESIS_OPEN, 0)

        def KW_PARENTHESIS_CLOSE(self):
            return self.getToken(PythonSParser.KW_PARENTHESIS_CLOSE, 0)

        def KW_BRACKETS_OPEN(self):
            return self.getToken(PythonSParser.KW_BRACKETS_OPEN, 0)

        def function_body_statements(self):
            return self.getTypedRuleContext(PythonSParser.Function_body_statementsContext,0)


        def KW_BRACKETS_CLOSE(self):
            return self.getToken(PythonSParser.KW_BRACKETS_CLOSE, 0)

        def getRuleIndex(self):
            return PythonSParser.RULE_main_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_function_declaration" ):
                listener.enterMain_function_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_function_declaration" ):
                listener.exitMain_function_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_function_declaration" ):
                return visitor.visitMain_function_declaration(self)
            else:
                return visitor.visitChildren(self)




    def main_function_declaration(self):

        localctx = PythonSParser.Main_function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_main_function_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(PythonSParser.KW_DEF)
            self.state = 86
            self.match(PythonSParser.KW_MAIN)
            self.state = 87
            self.match(PythonSParser.KW_PARENTHESIS_OPEN)
            self.state = 88
            self.match(PythonSParser.KW_PARENTHESIS_CLOSE)
            self.state = 89
            self.match(PythonSParser.KW_BRACKETS_OPEN)
            self.state = 90
            self.function_body_statements()
            self.state = 91
            self.match(PythonSParser.KW_BRACKETS_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_body_statementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forloop_statement(self):
            return self.getTypedRuleContext(PythonSParser.Forloop_statementContext,0)


        def function_body_statements(self):
            return self.getTypedRuleContext(PythonSParser.Function_body_statementsContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(PythonSParser.Break_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(PythonSParser.While_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(PythonSParser.If_statementContext,0)


        def else_statement(self):
            return self.getTypedRuleContext(PythonSParser.Else_statementContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(PythonSParser.Print_statementContext,0)


        def assigment_statement(self):
            return self.getTypedRuleContext(PythonSParser.Assigment_statementContext,0)


        def local_variable_declaration_statement(self):
            return self.getTypedRuleContext(PythonSParser.Local_variable_declaration_statementContext,0)


        def function_call_statement(self):
            return self.getTypedRuleContext(PythonSParser.Function_call_statementContext,0)


        def KW_SEMICOLON(self):
            return self.getToken(PythonSParser.KW_SEMICOLON, 0)

        def return_statement(self):
            return self.getTypedRuleContext(PythonSParser.Return_statementContext,0)


        def getRuleIndex(self):
            return PythonSParser.RULE_function_body_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body_statements" ):
                listener.enterFunction_body_statements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body_statements" ):
                listener.exitFunction_body_statements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_body_statements" ):
                return visitor.visitFunction_body_statements(self)
            else:
                return visitor.visitChildren(self)




    def function_body_statements(self):

        localctx = PythonSParser.Function_body_statementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_body_statements)
        self._la = 0 # Token type
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.forloop_statement()
                self.state = 94
                self.function_body_statements()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.break_statement()
                self.state = 97
                self.function_body_statements()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.while_statement()
                self.state = 100
                self.function_body_statements()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.if_statement()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==34:
                    self.state = 103
                    self.else_statement()


                self.state = 106
                self.function_body_statements()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.print_statement()
                self.state = 109
                self.function_body_statements()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 111
                self.assigment_statement()
                self.state = 112
                self.function_body_statements()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 114
                self.local_variable_declaration_statement()
                self.state = 115
                self.function_body_statements()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 117
                self.function_call_statement()
                self.state = 118
                self.match(PythonSParser.KW_SEMICOLON)
                self.state = 119
                self.function_body_statements()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 121
                self.return_statement()
                self.state = 122
                self.function_body_statements()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonSParser.RULE_function_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class L_typeContext(Function_declarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSParser.Function_declarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def KW_DEF(self):
            return self.getToken(PythonSParser.KW_DEF, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSParser.ID)
            else:
                return self.getToken(PythonSParser.ID, i)
        def KW_PARENTHESIS_OPEN(self):
            return self.getToken(PythonSParser.KW_PARENTHESIS_OPEN, 0)
        def KW_PARENTHESIS_CLOSE(self):
            return self.getToken(PythonSParser.KW_PARENTHESIS_CLOSE, 0)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSParser.TYPE)
            else:
                return self.getToken(PythonSParser.TYPE, i)
        def KW_BRACKETS_OPEN(self):
            return self.getToken(PythonSParser.KW_BRACKETS_OPEN, 0)
        def function_body_statements(self):
            return self.getTypedRuleContext(PythonSParser.Function_body_statementsContext,0)

        def KW_BRACKETS_CLOSE(self):
            return self.getToken(PythonSParser.KW_BRACKETS_CLOSE, 0)
        def KW_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSParser.KW_COMMA)
            else:
                return self.getToken(PythonSParser.KW_COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_type" ):
                listener.enterL_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_type" ):
                listener.exitL_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitL_type" ):
                return visitor.visitL_type(self)
            else:
                return visitor.visitChildren(self)


    class L_voidContext(Function_declarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSParser.Function_declarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def KW_DEF(self):
            return self.getToken(PythonSParser.KW_DEF, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSParser.ID)
            else:
                return self.getToken(PythonSParser.ID, i)
        def KW_PARENTHESIS_OPEN(self):
            return self.getToken(PythonSParser.KW_PARENTHESIS_OPEN, 0)
        def KW_PARENTHESIS_CLOSE(self):
            return self.getToken(PythonSParser.KW_PARENTHESIS_CLOSE, 0)
        def KW_BRACKETS_OPEN(self):
            return self.getToken(PythonSParser.KW_BRACKETS_OPEN, 0)
        def function_body_statements(self):
            return self.getTypedRuleContext(PythonSParser.Function_body_statementsContext,0)

        def KW_BRACKETS_CLOSE(self):
            return self.getToken(PythonSParser.KW_BRACKETS_CLOSE, 0)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSParser.TYPE)
            else:
                return self.getToken(PythonSParser.TYPE, i)
        def KW_VOID(self):
            return self.getToken(PythonSParser.KW_VOID, 0)
        def KW_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSParser.KW_COMMA)
            else:
                return self.getToken(PythonSParser.KW_COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_void" ):
                listener.enterL_void(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_void" ):
                listener.exitL_void(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitL_void" ):
                return visitor.visitL_void(self)
            else:
                return visitor.visitChildren(self)



    def function_declaration(self):

        localctx = PythonSParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = PythonSParser.L_typeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(PythonSParser.KW_DEF)
                self.state = 128
                self.match(PythonSParser.ID)
                self.state = 129
                self.match(PythonSParser.KW_PARENTHESIS_OPEN)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==40:
                    self.state = 130
                    self.match(PythonSParser.TYPE)
                    self.state = 131
                    self.match(PythonSParser.ID)
                    self.state = 137
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==21:
                        self.state = 132
                        self.match(PythonSParser.KW_COMMA)
                        self.state = 133
                        self.match(PythonSParser.TYPE)
                        self.state = 134
                        self.match(PythonSParser.ID)
                        self.state = 139
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 142
                self.match(PythonSParser.KW_PARENTHESIS_CLOSE)
                self.state = 143
                self.match(PythonSParser.TYPE)
                self.state = 144
                self.match(PythonSParser.KW_BRACKETS_OPEN)
                self.state = 145
                self.function_body_statements()
                self.state = 146
                self.match(PythonSParser.KW_BRACKETS_CLOSE)
                pass

            elif la_ == 2:
                localctx = PythonSParser.L_voidContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(PythonSParser.KW_DEF)
                self.state = 149
                self.match(PythonSParser.ID)
                self.state = 150
                self.match(PythonSParser.KW_PARENTHESIS_OPEN)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==40:
                    self.state = 151
                    self.match(PythonSParser.TYPE)
                    self.state = 152
                    self.match(PythonSParser.ID)
                    self.state = 158
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==21:
                        self.state = 153
                        self.match(PythonSParser.KW_COMMA)
                        self.state = 154
                        self.match(PythonSParser.TYPE)
                        self.state = 155
                        self.match(PythonSParser.ID)
                        self.state = 160
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 163
                self.match(PythonSParser.KW_PARENTHESIS_CLOSE)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==45:
                    self.state = 164
                    self.match(PythonSParser.KW_VOID)


                self.state = 167
                self.match(PythonSParser.KW_BRACKETS_OPEN)
                self.state = 168
                self.function_body_statements()
                self.state = 169
                self.match(PythonSParser.KW_BRACKETS_CLOSE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_RETURN(self):
            return self.getToken(PythonSParser.KW_RETURN, 0)

        def KW_SEMICOLON(self):
            return self.getToken(PythonSParser.KW_SEMICOLON, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonSParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonSParser.RULE_return_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statement" ):
                listener.enterReturn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statement" ):
                listener.exitReturn_statement(self)
